--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
         <h2>Our Portfolio</h2>
         <ul>
             <li>
-                <img src="./images/Our Portfolio/img 1.jpg" alt="Bankink App" width="360">
+                <img src="../images/Our Portfolio/img 1.jpg" alt="Bankink App" width="360">
                 <h3>Banking App</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="./images/Our Portfolio/img 2.jpg" alt="Cashless Payment" width="360">
+                <img src="../images/Our Portfolio/img 2.jpg" alt="Cashless Payment" width="360">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/Our Portfolio/img 3.jpg" alt="Meditation App" width="360">
+                <img src="../images/Our Portfolio/img 3.jpg" alt="Meditation App" width="360">
                 <h3>Meditation App</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="./images/Our Portfolio/img 4.jpg" alt="Taxi Service" width="360">
+                <img src="../images/Our Portfolio/img 4.jpg" alt="Taxi Service" width="360">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/Our Portfolio/img 5.jpg" alt="Screen Illustrations" width="360">
+                <img src="../images/Our Portfolio/img 5.jpg" alt="Screen Illustrations" width="360">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
             </li>
             <li>
-                <img src="./images/Our Portfolio/img 6.jpg" alt="Online Courses" width="360">
+                <img src="../images/Our Portfolio/img 6.jpg" alt="Online Courses" width="360">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
             </li>
