--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
@@ -15,17 +20,18 @@
 
 <body>
     <!-- Header -->
-    <header>
+    <header class="page-header">
         <nav class="page-nav">
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo">Web<span class="nav-web">Studio</span></a>
+            <ul class="menu">
+                <li><a  class="nav-link" href="./index.html">Studio</a></li>
+                <li><a class="nav-link" href="">Portfolio</a></li>
+                <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
+
+        <address class="page-address">
+            <ul class="page-addressmp">
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -35,9 +41,9 @@
     <!-- Main content -->
     <main>
         <!-- Section 1 -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="section-first">
+            <h1 class="section-text">Effective Solutions for Your Business</h1>
+            <button type="button" class="button-order">Order Service</button>
         </section>
 
         <!-- Section 2 -->
@@ -45,23 +51,23 @@
             <h2>Features</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <h3 class="features-htxt">Strategy</h3>
+                    <p class="features-ptxt">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="features-htxt">Punctuality</h3>
+                    <p class="features-ptxt">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="features-htxt">Diligence</h3>
+                    <p class="features-ptxt">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="features-htxt">Technologies</h3>
+                    <p class="features-ptxt">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -69,27 +75,27 @@
 
         <!-- Section 3 -->
         <section>
-            <h2>Our Team</h2>
+            <h2 class="section-team">Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Our team/img(1).jpg" alt="Mark Guerrero" width="264" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <img src="./images/our-team/img(1).jpg" alt="Mark Guerrero" width="264" />
+                    <h3 class="txt-icon">Mark Guerrero</h3>
+                    <p class="p-icon">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Our team/img(2).jpg" alt="Tom Ford" width="264" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <img src="./images/our-team/img(2).jpg" alt="Tom Ford" width="264" />
+                    <h3 class="txt-icon">Tom Ford</h3>
+                    <p class="p-icon">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Our team/img(3).jpg" alt="Camila Garcia" width="264" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <img src="./images/our-team/img(3).jpg" alt="Camila Garcia" width="264" />
+                    <h3 class="txt-icon">Camila Garcia</h3>
+                    <p class="p-icon">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Our team/img(4).jpg" alt="Daniel Wilson" width="264" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <img src="./images/our-team/img(4).jpg" alt="Daniel Wilson" width="264" />
+                    <h3 class="txt-icon">Daniel Wilson</h3>
+                    <p class="p-icon">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -97,35 +103,35 @@
 
 <!--section 4 -->
     <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-team">Our Portfolio</h2>
         <ul>
             <li>
-                <img src="../images/Our Portfolio/img 1.jpg" alt="Bankink App" width="360">
+                <img src="/images/our-portfolio/img1.jpg" alt="Bankink App" width="360">
                 <h3>Banking App</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="../images/Our Portfolio/img 2.jpg" alt="Cashless Payment" width="360">
+                <img src="/images/our-portfolio/img2.jpg" alt="Cashless Payment" width="360" />
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="../images/Our Portfolio/img 3.jpg" alt="Meditation App" width="360">
+                <img src="/images/our-portfolio/img3.jpg" alt="Meditation App" width="360" />
                 <h3>Meditation App</h3>
                 <p>App</p>
             </li>
             <li>
-                <img src="../images/Our Portfolio/img 4.jpg" alt="Taxi Service" width="360">
+                <img src="/images/our-portfolio/img4.jpg" alt="Taxi Service" width="360" />
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="../images/Our Portfolio/img 5.jpg" alt="Screen Illustrations" width="360">
+                <img src="/images/our-portfolio/img5.jpg" alt="Screen Illustrations" width="360" />
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
             </li>
             <li>
-                <img src="../images/Our Portfolio/img 6.jpg" alt="Online Courses" width="360">
+                <img src="/images/our-portfolio/img6.jpg" alt="Online Courses" width="360" />
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
             </li>
