--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="page-nav">
             <a href="./index.html" class="logo">Web<span class="nav-web">Studio</span></a>
             <ul class="menu">
-                <li><a  class="nav-link" href="./index.html">Studio</a></li>
+                <li><a class="nav-link" href="./index.html">Studio</a></li>
                 <li><a class="nav-link" href="">Portfolio</a></li>
                 <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
@@ -47,7 +47,7 @@
         </section>
 
         <!-- Section 2 -->
-        <section>
+        <section class="page-section-2">
             <h2>Features</h2>
             <ul>
                 <li>
@@ -74,9 +74,9 @@
         </section>
 
         <!-- Section 3 -->
-        <section>
+        <section class="page-section-3">
             <h2 class="section-team">Our Team</h2>
-            <ul>
+            <ul class="page-txt-bord">
                 <li>
                     <img src="./images/our-team/img(1).jpg" alt="Mark Guerrero" width="264" />
                     <h3 class="txt-icon">Mark Guerrero</h3>
