--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header class="page-header">
         <nav class="page-nav">
-            <a href="./index.html" class="logo">Web<span class="nav-web">Studio</span></a>
+            <a href="./index.html" class="header-logo">Web<span class="nav-web">Studio</span></a>
             <ul class="menu">
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
                 <li><a class="nav-link" href="">Portfolio</a></li>
@@ -80,22 +80,22 @@
                 <li>
                     <img src="./images/our-team/img(1).jpg" alt="Mark Guerrero" width="264" />
                     <h3 class="txt-icon">Mark Guerrero</h3>
-                    <p class="p-icon">Product Designer</p>
+                    <p class="pxp-icon">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/our-team/img(2).jpg" alt="Tom Ford" width="264" />
                     <h3 class="txt-icon">Tom Ford</h3>
-                    <p class="p-icon">Frontend Developer</p>
+                    <p class="pxp-icon">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/our-team/img(3).jpg" alt="Camila Garcia" width="264" />
                     <h3 class="txt-icon">Camila Garcia</h3>
-                    <p class="p-icon">Marketing</p>
+                    <p class="pxp-icon">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/our-team/img(4).jpg" alt="Daniel Wilson" width="264" />
                     <h3 class="txt-icon">Daniel Wilson</h3>
-                    <p class="p-icon">UI Designer</p>
+                    <p class="pxp-icon">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -106,42 +106,42 @@
         <h2 class="section-team">Our Portfolio</h2>
         <ul>
             <li>
-                <img src="/images/our-portfolio/img1.jpg" alt="Bankink App" width="360">
-                <h3>Banking App</h3>
-                <p>App</p>
+                <img src="./images/our-portfolio/img1.jpg" alt="Bankink App" width="360">
+                <h3 class="sec-main-txt">Banking App</h3>
+                <p class="main-txt">App</p>
             </li>
             <li>
-                <img src="/images/our-portfolio/img2.jpg" alt="Cashless Payment" width="360" />
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <img src="./images/our-portfolio/img2.jpg" alt="Cashless Payment" width="360" />
+                <h3 class="sec-main-txt">Cashless Payment</h3>
+                <p class="main-txt">Marketing</p>
             </li>
             <li>
-                <img src="/images/our-portfolio/img3.jpg" alt="Meditation App" width="360" />
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <img src="./images/our-portfolio/img3.jpg" alt="Meditation App" width="360" />
+                <h3 class="sec-main-txt">Meditation App</h3>
+                <p class="main-txt">App</p>
             </li>
             <li>
-                <img src="/images/our-portfolio/img4.jpg" alt="Taxi Service" width="360" />
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <img src="./images/our-portfolio/img4.jpg" alt="Taxi Service" width="360" />
+                <h3 class="sec-main-txt">Taxi Service</h3>
+                <p class="main-txt">Marketing</p>
             </li>
             <li>
-                <img src="/images/our-portfolio/img5.jpg" alt="Screen Illustrations" width="360" />
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <img src="./images/our-portfolio/img5.jpg" alt="Screen Illustrations" width="360" />
+                <h3 class="sec-main-txt">Screen Illustrations</h3>
+                <p class="main-txt">Design</p>
             </li>
             <li>
-                <img src="/images/our-portfolio/img6.jpg" alt="Online Courses" width="360" />
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <img src="./images/our-portfolio/img6.jpg" alt="Online Courses" width="360" />
+                <h3 class="sec-main-txt">Online Courses</h3>
+                <p class="main-txt">Marketing</p>
             </li>
         </ul>
     </section>
 
     <!-- Footer -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer-box">
+        <a class="footer-logo" href="./index.html">Web<span class="nav-web-footer">Studio</span></a>
+        <p class="main-text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer> 
 </body>
 
