--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </main>
 
 <!--section 4 -->
-    <section>
+    <section class="last-section">
         <h2 class="section-team">Our Portfolio</h2>
         <ul>
             <li>
