--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <!--section 4 -->
     <section class="last-section">
-        <h2 class="section-team">Our Portfolio</h2>
+        <h2>Our Portfolio</h2>
         <ul>
             <li>
                 <img src="./images/our-portfolio/img1.jpg" alt="Bankink App" width="360">
