--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
 <!--section 4 -->
     <section class="last-section">
-        <h2>Our Portfolio</h2>
-        <ul>
+        <h2 class="text-portfolio">Our Portfolio</h2>
+        <ul class="page-txt-next">
             <li>
                 <img src="./images/our-portfolio/img1.jpg" alt="Bankink App" width="360">
                 <h3 class="sec-main-txt">Banking App</h3>
