add sections fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Section 3 -->
         <section class="page-section-3">
             <h2 class="section-team">Our Team</h2>
-            <ul class="page-txt-bord">
+            <ul class="page-text-bord">
                 <li>
                     <img src="./images/our-team/img(1).jpg" alt="Mark Guerrero" width="264" />
                     <h3 class="txt-icon">Mark Guerrero</h3>
@@ -101,7 +101,7 @@
         </section>
     </main>
 
-<!--section 4 -->
+    <!--section 4 -->
     <section class="last-section">
         <h2 class="text-portfolio">Our Portfolio</h2>
         <ul class="page-txt-next">
