--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <header class="page-header">
         <nav class="page-nav">
             <a href="./index.html" class="header-logo">Web<span class="nav-web">Studio</span></a>
-            <ul class="menu">
+            <ul class="header-menu">
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
-                <li><a class="nav-link" href="">Portfolio</a></li>
-                <li><a class="nav-link" href="">Contacts</a></li>
+                <li><a class="nav-link" href="#">Portfolio</a></li>
+                <li><a class="nav-link" href="#">Contacts</a></li>
             </ul>
         </nav>
 
@@ -74,25 +74,25 @@
         </section>
 
         <!-- Section 3 -->
-        <section class="page-section-3">
+        <section class="page-section-three">
             <h2 class="section-team">Our Team</h2>
             <ul class="page-text-bord">
-                <li>
+                <li class="section-threeli">
                     <img src="./images/our-team/img(1).jpg" alt="Mark Guerrero" width="264" />
                     <h3 class="txt-icon">Mark Guerrero</h3>
                     <p class="pxp-icon">Product Designer</p>
                 </li>
-                <li>
+                <li class="section-threeli">
                     <img src="./images/our-team/img(2).jpg" alt="Tom Ford" width="264" />
                     <h3 class="txt-icon">Tom Ford</h3>
                     <p class="pxp-icon">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="section-threeli">
                     <img src="./images/our-team/img(3).jpg" alt="Camila Garcia" width="264" />
                     <h3 class="txt-icon">Camila Garcia</h3>
                     <p class="pxp-icon">Marketing</p>
                 </li>
-                <li>
+                <li class="section-threeli">
                     <img src="./images/our-team/img(4).jpg" alt="Daniel Wilson" width="264" />
                     <h3 class="txt-icon">Daniel Wilson</h3>
                     <p class="pxp-icon">UI Designer</p>
