--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <a href="./index.html" class="header-logo">Web<span class="nav-web">Studio</span></a>
             <ul class="header-menu">
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
-                <li><a class="nav-link" href="#">Portfolio</a></li>
-                <li><a class="nav-link" href="#">Contacts</a></li>
+                <li><a class="nav-link" href="">Portfolio</a></li>
+                <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
 
         <address class="page-address">
             <ul class="page-addressmp">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
